--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7"
 }
