--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-js-loader": "^0.1.0",
         "react-router-dom": "^6.0.2"
     }
 }
