--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
-    "/js/chart.js": "/js/chart.js?id=c50e1ce59be40acb02eb",
-    "/css/app.css": "/css/app.css?id=43cdc96599a84a0cb788"
+    "/js/chart.js": "/js/chart.js?id=11de7d753980efe00b15",
+    "/js/deposits-popup.js": "/js/deposits-popup.js?id=7a37a4ffc5dc73cd52c9",
+    "/js/modal.js": "/js/modal.js?id=964379ac69d8e6e0151a",
+    "/css/app.css": "/css/app.css?id=3dfb00ea02d88ebfb82b"
 }
